--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -14,6 +14,7 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IIS",
+      "launchBrowser": true,
       "environmentVariables": {
         "MailSettings__ToAddress": "someEmail@theWorld.fakesite",
         "ASPNETCORE_ENVIRONMENT": "Development"
